@@ -1,3 +1,8 @@
+2004-02-06  James E Wilson  <wilson@specifixinc.com>
+
+	* config/tc-ia64.c (dot_endp): Delete call to output_endp.
+	(generate_unwind_image): Re-add it here.
+
 2004-02-06  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* dwarf2dbg.c (DWARF2_ADDR_SIZE): Remove trailing ';'
